--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,9 @@
 .custom-navbar {
     border-bottom: 1px solid rgba(128, 128, 128, 0.361);
     border-top: 1px solid rgba(128, 128, 128, 0.361);
-    margin: 0px 2rem;
-    margin-top: 2rem;
-    border-radius: 15px;
+    /* margin: 0px 2rem; */
+    /* margin-top: 2rem; */
+    /* border-radius: 15px; */
     position: sticky;
     /* Makes it sticky */
     top: 0;
@@ -15,7 +15,7 @@
 }
 
 .navLink {
-    font-size: 14px;
+    font-size: 16px;
     color: #000;
     padding: 10px 0px;
 }
