--- a/src/components/About/Mission.css
+++ b/src/components/About/Mission.css
@@ -1,4 +1,4 @@
-.mission {
+.missionUp {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,7 +38,7 @@
 }
 
 @media (max-width: 700px) {
-    .mission {
+    .missionUp {
         display: flex;
         flex-direction: column;
         align-items: center;
