--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 :root {
   --bgColor: #192518;
   --lightGreen: #08b35f;
   --lightBlack: #333;
+  --font-ubuntu: 'Ubuntu', sans-serif;
 }
 
 
@@ -12,7 +14,7 @@
 
 .btn {
   color: var(--bgColor);
-  background-color: white;
+  background-color: var(--lightGreen);
   border-radius: 50px;
   justify-content: center;
   align-items: center;
@@ -21,4 +23,28 @@
   line-height: 130%;
   text-decoration: none;
   display: flex;
+}
+
+::selection {
+  background-color: var(--lightGreen);
+  color: var(--bgColor);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--lightGreen);
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #058749;
 }
