--- a/src/components/HomeHero/HomeHero.css
+++ b/src/components/HomeHero/HomeHero.css
@@ -7,9 +7,11 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
+
+    font-family: var(--font-ubuntu);
 }
 
-.hero::before {
+/* .hero::before {
     content: '';
     position: absolute;
     top: 0;
@@ -21,23 +23,23 @@
     background-position: center;
     opacity: 0.3;
     z-index: -1;
-}
+} */
 
 .heroHeading {
     color: var(--darkBlack);
     margin-top: 0;
     margin-bottom: 10px;
-    font-size: 48px;
-    font-weight: 400;
+    /* font-size: 48px;
+    font-weight: 400; */
     line-height: 130%;
     position: relative;
 }
 
-.heroText {
+/* .heroText {
     font-size: 20px;
     margin-top: 20px;
     position: relative;
-}
+} */
 
 @media (max-width: 500px) {
     .heroHeading {
