--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 :root {
   --bgColor: #192518;
   --lightGreen: #08b35f;
@@ -25,26 +26,12 @@
   display: flex;
 }
 
-::selection {
-  background-color: var(--lightGreen);
-  color: var(--bgColor);
+/* Hide scrollbar but allow scrolling */
+body {
+  overflow: scroll;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--lightGreen);
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #058749;
+  width: 0;
+  height: 0;
 }
