--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -24,7 +24,8 @@
 }
 
 .testBox {
-    background-color: white;
+    background-color: rgba(23, 23, 23, 0.5);
+    color: white;
     display: flex;
     flex-direction: column;
     padding: 46px;
